fixed spacing for short lists

--- a/css/theme/bekk.css
+++ b/css/theme/bekk.css
@@ -292,7 +292,7 @@ ul.keyword-list {
 	background-size: 100% 100%;
 }
 
-.agenda .column-1 {
+.short-list {
 	margin-top: 50px;
 }
 
